removed secrets from config

--- a/custom REST Service/LogReceiverService/appsettings.json
+++ b/custom REST Service/LogReceiverService/appsettings.json
@@ -13,6 +13,6 @@
     }
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "13eff16b-5fca-497a-9a79-c2682fe14e8c"
+    "InstrumentationKey": "<add your app insights key>"
   }
 }
